[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "crypto-ws-api"
authors = [{name = "Jerry Fedorenko", email = "jerry.fedorenko@yahoo.com"}]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers=["Programming Language :: Python :: 3",
             "Development Status :: 5 - Production/Stable",
             "License :: OSI Approved :: MIT License",
             "Operating System :: Unix",
             "Operating System :: Microsoft :: Windows",
             "Operating System :: MacOS"]
dynamic = ["version", "description"]
requires-python = ">=3.10"

dependencies = [
    "shortuuid~=1.0.13",
    "platformdirs==4.3.6",
    "toml~=0.10.2",
    "websockets==15.0.1",
    "ujson~=5.10.0",
    "cryptography~=44.0.2"
]

[tool.flit.module]
name = "crypto_ws_api"

[project.urls]
Source = "https://github.com/DogsTailFarmer/crypto-ws-api"

[project.scripts]
crypto_ws_api_init = "crypto_ws_api.__init__:init"
crypto_ws_api_demo = "crypto_ws_api.demo:main"
